...
  "selectWithMosqueId": "\"علي سبيل المثال, جَرِّب 16087، إنه معرف 'المسجد الأقصى المبارك'",
  "searchForMosque": "ما هو المسجد الذي تبحث عنه؟ (المعرف، الاسم، المدينة، الرمز البريدي...)",
  "searchMosque": "البحث عن مسجد",
  "mosqueNameError": "أدخل اسم المسجد",
  "slugError": "ليس \"slug\" معرف صحيح للمسجد",
  "doYouKnowMosqueId": "هل تعرف معرف التثبيت الخاص بك أو معرف المسجد الخاص بك؟",
  "yes": "نعم",
  "no": "لا",
  "networkStatus": "حالة الشبكة",
  "mosqueNoMore": "لايوجد المزيد من النتائج",
  "mosqueNoResults": "لا توجد نتائج",
  "offline": "غير مُتصل",
  "imsak": "الإمساك",
...
  "duaaRemainder": "تذكير بالدعاء",
  "fajrWakeUp": "منبه لصلاة الفجر",
  "changeLanguage": "تغيير اللغة",
  "forceScreen": "تفعيل أو عرض شاشة معينة في النظام",
  "clear": "مسح",
  "changeTheme": "تغيير المظهر",
  "next": "التالي",
  "mainScreenOrSecondaryScreen": "موقع الشاشة",
  "mainScreenOrSecondaryScreenEXPLINATION": "هل تريد تثبيت هذه الشاشة في غرفة الصلاة الرئيسية (الرجال) ؟",
  "mainScreen": "الشاشة الرئيسية",
  "secondaryScreen": "الشاشة الثانوية",
  "duaaElEftar": "دعاء الإفطار",
  "announcementOnlyMode": "وضع الإعلانات",
...
  "backoffice_default": "الإعدادات الافتراضية للواجهة الإدارية",
  "recommended": "موصى به",
  "sabah": "الفجر",
  "randomHadithLanguage": "لغة الأحاديث",
  "en": "الإنجليزية",
  "fr": "الفرنسية",
  "ar": "العربية",
  "tr": "التركية",
  "de": "الألمانية",
  "es": "الإسبانية",
  "pt": "البرتغالية",
  "nl": "الهولندية",
  "fr_ar": "الفرنسية والعربية",
...
