...
  "selectWithMosqueId": "Try: 256, It's the ID of 'Grande Mosquée de Paris'",
  "searchForMosque": "Which Mosque are you looking for ? (ID, Name, City, Postal code...)",
  "searchMosque": "Search for a Mosque",
  "mosqueNameError": "Enter the Mosque name",
  "slugError": "Isn't a valid mosque slug",
  "doYouKnowMosqueId": "Do you know your installation ID or your Mosque ID?",
  "yes": "Yes",
  "no": "No",
  "networkStatus": "Network Status",
  "mosqueNoMore": "No more results",
  "mosqueNoResults": "No results",
  "offline": "Offline",
  "imsak": "Imsak",
...
  "duaaRemainder": "Duaa Remainder",
  "fajrWakeUp": "Fajr Wake Up",
  "changeLanguage": "Change language",
  "forceScreen": "Force screen",
  "clear": "Clear",
  "changeTheme": "Change Theme",
  "next": "Next",
  "mainScreenOrSecondaryScreen": "Screen location",
  "mainScreenOrSecondaryScreenEXPLINATION": "Do you want to install this screen in the main prayer room (men prayer room) ?",
  "mainScreen": "Main screen",
  "secondaryScreen": "Secondary screen",
  "duaaElEftar": "Duaa El Eftar",
  "announcementOnlyMode": "Announcements mode",
...
  "orientation": "Orientation",
  "selectYourMawaqitTvAppOrientation": "Select your mawaqit tv app orientation",
  "deviceDefault": "Device Default",
  "deviceDefaultBTNDescription": "Mawaqit will auto select the default orientation based on the screen orientation",
  "portrait": "Portrait",
  "portraitBTNDescription": "For vertical orientation recommended for mosque with small space",
  "landscape": "Landscape",
  "landscapeBTNDescription": "For Horizontal orientation. The main layout for mawaqit tv app and recommended one for most mosques",
  "eidMubarak": "Eid Mubarak",
  "takbeerAleidText": "Allahu Akbar, Allahu Akbar, Allahu Akbar, la ilaha illa Allah, Allahu Akbar, Allahu Akbar, wa lillahi al-hamd",
  "settings": "Settings",
  "applicationModes": "Application Mode",
  "ifYouAreFacingAnIssueWithTheAppActivateThis": "If you are facing issues with the app, try to enable this option",
  "hijriAdjustments": "Local Hijri adjustments",
  "hijriAdjustmentsDescription": "Adjust the hijri date locally in your device. This will not affect the online mosque settings",
  "backoffice_default": "Backoffice Defaults",
  "recommended": "Recommended",
  "sabah": "Sabah",
  "randomHadithLanguage": "Random hadith language",
  "en": "English",
  "fr": "French",
  "ar": "Arabic",
  "tr": "Turkish",
  "de": "German",
  "es": "Spanish",
  "pt": "Portuguese",
...
  "processingRequest": "Processing request...",
  "loadingStream": "Loading stream...",
  "rtspUrlHint": "Enter RTSP URL or YouTube link",
  "replaceWorkflowWithStream": "Automatically display the camera stream",
  "replaceAppWorkflowWithCameraStream": "The screen will automatically display the camera stream as soon as the camera starts recording; if it stops, the screen returns to the prayer times display",
  "streamError": "An error occurred while streaming",
  "finish": "Finish",
  "schedulingAlarms":"Scheduling on/off times...",
  "alarmsSucessSchedule":"On/Off triggers scheduled successfully",
  "alarmsScheduleFailure":"Failed to schedule On/Off triggers"
}

