...
  "selectWithMosqueId": "Try: 256, It's the ID of 'Grande Mosquée de Paris'",
  "searchForMosque": "Which Mosque are you looking for ? (ID, Name, City, Postal code...)",
  "searchMosque": "Search for a Mosque",
  "mosqueNameError": "Enter the Mosque name",
  "slugError": "Isn't a valid mosque slug",
  "doYouKnowMosqueId": "Do you know your installation ID or your Mosque ID?",
  "yes": "Yes",
  "no": "No",
  "networkStatus": "Network Status",
  "mosqueNoMore": "No more results",
  "mosqueNoResults": "No results",
  "offline": "Offline",
  "imsak": "Imsak",
  "jumua": "Jumua",
...
  "duaaBetweenSalahAndAdhan": "Anas bin Malik said: The Messenger of Allah ﷺ said: The supplication does not return between the call to prayer and the standing for prayer.",
  "salatKhayrMinaNawm": "Assalatu khayrun mina nawm",
  "salatElEid": "Eid Salah",
  "webView": "Enable Legacy Mode",
  "developersHomeScreen": "Developer's home screen",
  "onlineHome": "Online Home",
  "prayerTimes": "Prayer Times",
  "alerts": "Alert",
  "iqamaaCountDown": "Iqamaa Count Down",
  "afterAdhanHadith": "After Adhan Hadith",
  "afterSalahAzkar": "After Salah Azkar",
  "iqama": "Iqama",
  "randomHadith": "Random Hadith",
...
  "duaaRemainder": "Duaa Remainder",
  "fajrWakeUp": "Fajr Wake Up",
  "changeLanguage": "Change language",
  "forceScreen": "Force screen",
  "clear": "Clear",
  "changeTheme": "Change Theme",
  "next": "Next",
  "mainScreenOrSecondaryScreen": "Screen location",
  "mainScreenOrSecondaryScreenEXPLINATION": "Do you want to install this screen in the main prayer room (men prayer room) ?",
  "mainScreen": "Main screen",
  "secondaryScreen": "Secondary screen",
  "duaaElEftar": "Duaa El Eftar",
  "announcementOnlyMode": "Announcements mode",
...
  "normalModeExplanation": "Will show the normal screen with the prayer times and the announcements.",
  "announcementOnlyModeExplanation": "Will show announcements all time",
  "orientation": "Orientation",
  "selectYourMawaqitTvAppOrientation": "Select your mawaqit tv app orientation",
  "deviceDefault": "Device Default",
  "deviceDefaultBTNDescription": "Mawaqit will auto select the default orientation based on the screen orientation",
  "portrait": "Portrait",
  "portraitBTNDescription": "For vertical orientation recommended for mosque with small space",
  "landscape": "Landscape",
  "landscapeBTNDescription": "For Horizontal orientation. The main layout for mawaqit tv app and recommended one for most mosques",
  "eidMubarak": "Eid Mubarak",
  "takbeerAleidText": "Allahu Akbar, Allahu Akbar, Allahu Akbar, la ilaha illa Allah, Allahu Akbar, Allahu Akbar, wa lillahi al-hamd",
  "settings": "Settings",
...
  "hijriAdjustments": "Local Hijri adjustments",
  "hijriAdjustmentsDescription": "Adjust the hijri date locally in your device. This will not affect the online mosque settings",
  "backoffice_default": "Backoffice Defaults",
  "recommended": "Recommended",
  "sabah": "Sabah",
  "randomHadithLanguage": "Random hadith language",
  "en": "English",
  "fr": "French",
  "ar": "Arabic",
  "tr": "Turkish",
  "de": "German",
  "es": "Spanish",
  "pt": "Portuguese",
...
  "noScannedResultsFound": "No near access points found",
  "connect": "Connect",
  "wifiPassword": "Password",
  "skip": "Skip",
  "noSSID": "**Hidden SSID**",
  "close": "Close",
  "search": "Search",
  "wifiSuccess": "Successfully connected to Wifi.",
  "wifiFailure": "Failed to connect to Wifi.",
  "timezoneSuccess": "Timezone set successfully.",
  "timezoneFailure": "Failed to set timezone.",
  "screenLock": "Screen on/off",
  "screenLockConfig": "Configure screen on/off",
...
