...
                    controller: inputController,
                    applyMask: applyNameMask,
                    onSubmit: _setMosqueId, // Pass the callback function
                  ).animate().slideY(begin: 1).fade()
                : SizedBox(),
            if (searchOutput != null)
              MosqueSimpleTile(
                focusNode: _focus,
                key: ValueKey(searchOutput!.uuid),
                autoFocus: true,
                mosque: searchOutput!,
                onTap: () {
                  return context.read<MosqueManager>().setMosqueUUid(searchOutput!.uuid.toString()).then((value) {
...
              hintText: S.of(context).selectWithMosqueId,
              hintStyle: TextStyle(
                fontWeight: FontWeight.normal,
                color: theme.brightness == Brightness.dark ? null : theme.primaryColor.withOpacity(0.4),
              ),
              suffixIcon: IconButton(
                tooltip: "Search by Id",
                icon: loading ? CircularProgressIndicator() : Icon(Icons.search),
                color: theme.brightness == Brightness.dark ? Colors.white70 : theme.primaryColor,
                onPressed: () => _setMosqueId(inputController.text),
              ),
              focusedBorder: OutlineInputBorder(
                borderRadius: BorderRadius.circular(30),
...
